--- a/post_back/2020-06-21-[Python]람다함수.md
+++ b/post_back/2020-06-21-[Python]람다함수.md
@@ -1,14 +1,121 @@
 
+## lambda 함수
 
 
-## lambda
----
-`lambda` 는 함수를 생성할 때 사용하는 예약어로 `def` 와 동일하다. 보통 함수를 한줄로 간결하게 만들 때 사용한다.  
+`람다(lambda)` 는 함수를 생성할 때 사용하는 예약어로 `def` 와 동일하다. 보통 함수를 한줄로 간결하게 만들 때 사용한다.  
+
 `lambda 매개변수1, 매개변수2.. : 매개변수를 이용한 표현식`
+
 ```python
 add = lambda a, b : a+b
 result = add(3,4)
 print(result)
+```
+```text
 7
 ```
-lambda는 return 명령어가 없어도 결괏값을 돌려준다
+
+lambda는 return 명령어가 없어도 결과값을 돌려준다
+
+<br>
+
+### lambda 함수 활용
+---
+
+`map`, `filter`, `sort` 함수와 함께 활용할 수 있다.
+
+<br>
+
+#### map 함수와 사용
+
+`map` 함수는 리스트나 튜플에 특별한 처리를 할 때 사용하는 함수이며 람다 함수와 함께 사용하여 간결하게 작성할 수 있다.
+
+```text
+map(함수, 리스트/튜플)
+```
+
+<br>
+
+첫번째 인자인 함수는 두번째 인자로 들어온 리스트나, 튜플에 특별한 가공 처리를 하는 함수이며, 사용자가 직접 함수를 정의한다.
+두번째 인자인 리스트나 튜플은 바꾸고자 하는 데이터들을 정의한다.
+
+다음은 `map` 함수와 람다 함수를 함께 사용하는 예제이다.
+
+```python
+mylist = [1, 2, 3, 4, 5]
+result = list(map((lambda x : x + 2), mylist))
+print(result)
+
+result2 = list(map((lambda x : x + 2), range(2, 6)))
+print(result2)
+```
+
+```text
+[3, 4, 5, 6, 7]
+
+[4, 5, 6, 7]
+```
+
+<br>
+
+#### filter 함수와 사용
+
+`filter` 함수는 시퀀스(리스트, 튜플 등)의 모든 요소 중에서 조건에 맞는 요소만을 반환하는 함수이며 람다 함수와 함께 사용하여 간결하게 작성할 수 있다.
+
+```text
+filter(함수, 리스트/튜플)
+```
+
+<br>
+
+첫번째 인자인 함수는 두번째 인자로 들어온 리스트나 튜플을 하나하나씩 받아서 필터링할 함수를 정의한다.
+두번째 인자인 리스트나 튜플은 바꾸고자 하는 데이터들을 정의한다.
+
+다음은 `filter` 함수와 람다 함수를 함께 사용하는 예제이다.
+
+```python
+mylist = [1, 2, 3, 4, 5]
+result = list(filter((lambda x : x % 2 == 1), mylist))
+print(result)
+
+result2 = list(filter((lambda x : x % 2 == 0), range(10)))
+print(result2)
+```
+
+```text
+[1, 3, 5]
+
+[0, 2, 4, 6, 8]
+```
+
+<br>
+
+#### sorted 함수와 사용
+
+`sorted` 함수는 시퀀스(리스트, 튜플 등)의 요소를 정렬한 결과를 반환하는 함수이며 람다 함수와 함께 사용하여 간결하게 작성할 수 있다.
+
+```text
+sorted(리스트/튜플, 파라미터)
+```
+
+<br>
+
+첫번째 인자인 함수는두번째 인자로 들어온 리스트나 튜플을 하나하나씩 받아서 필터링할 함수를 정의한다.
+두번째 인자인 리스트나 튜플은 바꾸고자 하는 데이터들을 정의한다.
+
+다음은 `filter` 함수와 람다 함수를 함께 사용하는 예제이다.
+
+```python
+mylist = [1, 2, 3, 4, 5]
+result = list(filter((lambda x : x % 2 == 1), mylist))
+print(result)
+
+result2 = list(filter((lambda x : x % 2 == 0), range(10)))
+print(result2)
+```
+
+```text
+[1, 3, 5]
+
+[0, 2, 4, 6, 8]
+```
