--- a/post_back/2024-01-18-[Network]모두의 네트워크(스위치, 통신방식).md
+++ b/post_back/2024-01-18-[Network]모두의 네트워크(스위치, 통신방식).md
@@ -6,70 +6,58 @@
 
 <br>
 
-### 이더넷(Ethernet)
+### 스위치(Switch)
 ---
 
-`이더넷` 이란 랜에서 데이터를 주고 받기 위한 규칙으로 허브와 같은 장비에 연결된 컴퓨터와 데이터를 주고받을 때 사용한다.
+`스위치` 란 랜을 구성할 때 사용하는 단말기 간 스위치 기능이 있는 통신망 중계 장치이다.
 
-- 일반적으로 사용되는 랜에서 가장 많이 활용되는 기술 규격이다.
-- 만약 허브에 연결된 컴퓨터들이 동시에 데이터를 보낸다면 충돌(collision)이 발생할 수도 있다.
-
-<br>
-
-#### CSMA/CD
-
-`CSMA/CD` 란 Carrier Sense Multiple Access with Collision Detection의 약어로 데이터 전송 시점을 늦추는 방법을 사용하여 반송파 감지 다중 접속 및 충돌을 방지한다.
-
-- CS : 데이터를 보내려고 하는 컴퓨터가 케이블에 데이터가 흐르고 있는지 확인하는 규칙
-- MA : 케이블에 데이터가 흐르고 있지 않으면 데이터를 보내도 된다는 규칙
-- CD : 충돌이 발생하고 있는지 확인하는 규칙
-
-최근에는 스위치 장비를 사용하면서 CSMA/CD를 잘 사용하지 않는다.
+- 데이터 링크 계층에서 동작하고 스위칭 허브 또는 레이어2 스위치라고도 불린다.
+- 스위치 안에는 MAC 주소 테이블이 존재한다.
 
 <br>
 
-### MAC 주소
+#### MAC 주소 테이블(MAC address table)
+
+`MAC 주소 테이블` 은 브리지 테이블(bridge table)이라고도 불리며 스위치의 포트 번호와 해당 포트에 연결되어 있는 컴퓨터의 MAC 주소가 저장된 데이터베이스이다.
+
+- 스위치에 연결된 컴퓨터가 프레임(데이터)을 전송하면 MAC 주소 테이블을 확인하고 해당 포트로 전송한다.
+- 만약 테이블에 저장되지 않는 주소라면, MAC 주소와 포트 번호를 데이터베이스에 정보를 저장한다. 이를 MAC 주소 학습 기능이라고 한다.
+
+<br>
+
+#### 플러딩(flooding)과 MAC 주소 필터링
+
+`플러딩` 이란 MAC 주소 테이블에 등록되어 있지 않은 MAC 주소가 들어오면 송신 포트를 제외한 모든 포트에 데이터를 전송하는 것을 의미한다.
+`MAC 주소 필터링` 이란 주소를 저장한 이후 해당 포트에만 프레임을 전송하기 위해, MAC 주소를 기준으로 목적지를 선택하는 것이다.
+
+
+<br>
+
+### 전이중 통신과 반이중 통신
 ---
 
-`MAC 주소` 란 Media Access Control Address의 약어로 랜카드에 할당된 전 세계에서 유일한 번호로 물리 주소를 의미한다.
-
-- 48비트 숫자로 구성되어 있으며 앞 24비트는 제조사 번호, 뒤 24비트는 일련번호를 나타낸다.
-- MAC 주소를 사용한 통신으로는 이더넷 헤드와 트레일러가 있다.
+`전이중 통신` 은 데이터의 송수신을 동시에 통신하는 방식이며, 데이터를 동시에 전송해도 충돌이 발생하지 않는다. 스위치가 전이중 통신 방식을 사용한다.
+`반이중 통신` 은 회선 하나로 송신과 수신을 번갈아가면서 통신하는 방식이며, 데이터를 동시에 통신하면 충돌이 발생한다. 허브가 반이중 통신 방식을 사용한다.
 
 <br>
 
-#### 이더넷 헤더
+#### 충돌 도메인
 
-`이더넷 헤더` 는 목적지의 MAC 주소(6 bytes), 출발지 MAC 주소(6 bytes), 유형(2 bytes)으로 총 14 bytes로 구성된다.
+`충돌 도메인` 이란 반이중 통신에서 동시에 데이터 전송 시 충돌이 발생할 때, 그 영향이 미치는 범위를 의미한다.
 
-|목적지 MAC 주소|출발지 MAC 주소|유형|
-|---|---|---|
-|6 바이트|6 바이트|2 바이트|
-
-이더넷 유형은 이더넷으로 전송되는 상위 계층 프로토콜의 종류를 식별하는 번호를 나타낸다.
-
-|유형 번호|프토로콜|
-|---|---|
-|0800|IPv4|
-|0806|ARP|
-|8035|RARP|
-|814C|SNMP over Ethernet|
-|86DD|IPv6|
+- 충돌 도메인이 넓을 수록 네트워크가 지연된다.
+- 허브는 연결된 모든 컴퓨터가 충돌 도메인이 된다.
+- 스위치는 컴퓨터와 연결된 포트만 충돌 도메인이 된다.
 
 
 <br>
 
-#### 이더넷 규격
+### ARP(Address Resolutino Protocol)
+---
 
-`이더넷 규격` 이란 통신이 가능한 랜선의 데이터 전송 속도를 정의한 것이라고 보면 된다. 규격 이름은 `(통신 속도 + 전송 방식 + 케이블 종류)` 로 결정된다.
-다음은 주로 사용되는 대표적인 규격이다.
+`ARP` 란 목적지 컴퓨터의 IP 주소를 이용하여 MAC 주소를 찾기 위한 프로토콜로 네트워크 계층 주소와 데이터 링크 계층 주소 사이의 변환을 담당하며 IP 주소를 물리 주소인 MAC 주소로 변환한다.
 
-
-|규격 이름|통신 속도|케이블|케이블 최대 길이|표준화 연도|
-|---|---|---|---|---|
-|10BASE5|10Mbps|동축케이블|500m|1982년|
-|10BASE2|10Mbps|동축케이블|185m|1988년|
-|10BASE-T|10Mbps|UTP케이블(Cat3이상)|100m|1990년|
-|100BASE5-TX|100Mbps|UTP케이블(Cat5이상)|100m|1995년|
-|1000BASE-T|1000Mbps|UTP케이블(Cat5이상)|100m|1999년|
-|10GBASE-T|10Gbps|UTP케이블(Cat6a이상)|100m|2006년|
+- ARP 캐시: 가장 최근에 변환한 IP와 하드웨어 주소(MAC 주소)를 매핑하려 보관하고 있는 램의 한 영역이다.
+- ARP 요청: IP 주소를 대치할 수 있는 물리 주인 MAC 주소를 찾아내기 위해 보내는 브로드캐스트 패킷 요청이다.
+- ARP 응답: ARP 요청에 대한 응답으로 요청한 IP 주소에 대한 물리 주소인 MAC 주소가 실려 있는 유니캐스트 패킷 응답이다.
+- ARP 테이블 : MAC 주소와 IP 주소의 매핑 정보를 메모리에 보관해 둔 것을 의미한다.
