--- a/post_back/2024-01-18-1-[Network]모두의 네트워크(네트워크 계층).md
+++ b/post_back/2024-01-18-1-[Network]모두의 네트워크(네트워크 계층).md
@@ -1,75 +1,132 @@
-## 모두의 네트워크(데이터 링크 계층)
+## 모두의 네트워크(네트워크 계층)
 
 해당 포스팅은 `모두의 네트워크` 책을 정리한 내용으로 OSI 모델의 2계층인 데이터 링크 계층에 대해 다룬다.
 
-`데이터 링크 계층(Data Link Layer)` 은 네트워크 기기 간에 데이터를 전송하고 물리 주소를 결정하며 네트워크 장비 간에 신호를 주고받는 규칙을 정한다.
+`네트워크 계층(Network Layer)` 은 서로 다른 네트워크에 있는 목적지로 데이터를 전송하는 기능을 수행한다.
 
 <br>
 
-### 이더넷(Ethernet)
+### IP(Internet Protocol)
 ---
 
-`이더넷` 이란 랜에서 데이터를 주고 받기 위한 규칙으로 허브와 같은 장비에 연결된 컴퓨터와 데이터를 주고받을 때 사용한다.
+`IP` 란 다른 컴퓨터들이 접근할 수 있게 가지고 있는 고유한 네트워크 주소를 의미한다.
 
-- 일반적으로 사용되는 랜에서 가장 많이 활용되는 기술 규격이다.
-- 만약 허브에 연결된 컴퓨터들이 동시에 데이터를 보낸다면 충돌(collision)이 발생할 수도 있다.
-
-<br>
-
-#### CSMA/CD
-
-`CSMA/CD` 란 Carrier Sense Multiple Access with Collision Detection의 약어로 데이터 전송 시점을 늦추는 방법을 사용하여 반송파 감지 다중 접속 및 충돌을 방지한다.
-
-- CS : 데이터를 보내려고 하는 컴퓨터가 케이블에 데이터가 흐르고 있는지 확인하는 규칙
-- MA : 케이블에 데이터가 흐르고 있지 않으면 데이터를 보내도 된다는 규칙
-- CD : 충돌이 발생하고 있는지 확인하는 규칙
-
-최근에는 스위치 장비를 사용하면서 CSMA/CD를 잘 사용하지 않는다.
+- 네트워크 계층의 대표적인 프로토콜이다.
+- 네트워크 계층에서는 상위 계층에서 가져온 데이터를 만들어 IP 헤더를 붙인다.
+- IP 프로토콜을 사용하여 캡슐화할 때 이렇게 만들어진 데이터를 IP 패킷이라고 한다.
+- 랜 안에서는 MAC 주소만으로도 통신할 수 있지만 네트워크 간에 통신을 하려면 IP 주소가 필요하다.
 
 <br>
 
-### MAC 주소
----
+#### IP 주소
 
-`MAC 주소` 란 Media Access Control Address의 약어로 랜카드에 할당된 전 세계에서 유일한 번호로 물리 주소를 의미한다.
+`IP 주소` 는 실제 주소와 같은 개념으로 다른 네트워크 목적지로 데이터를 보내기 위해 필요하다.
 
-- 48비트 숫자로 구성되어 있으며 앞 24비트는 제조사 번호, 뒤 24비트는 일련번호를 나타낸다.
-- MAC 주소를 사용한 통신으로는 이더넷 헤드와 트레일러가 있다.
+- IP 주소는 인터넷 서비스 제공자(ISP)로부터 받을 수 있다.
+- IP 주소 버전으로 IPv4와 IPv6가 있다.
+  - IPv4 : 32비트로 이루어져 있다.
+  - IPv6 : 128비트로 이루어져 있다.
+- IP 주소에는 공인과 사설이 있다.
+  - 공인 IP 주소 : 인터넷에 직접 연결되는 컴퓨터나 라우터에 할당된다.
+  - 사설 Ip 주소 : 회사나 가정의 랜 컴퓨터에 할당된다.
+- DHCP 기능을 이용하여 주소를 자동으로 할당한다.
+  - DHCP : Dynamic Host Configuration Protocol의 약어로 IP 주소를 자동으로 할당하는 프로토콜 이다.
 
 <br>
 
-#### 이더넷 헤더
+#### IP 주소 클래스
 
-`이더넷 헤더` 는 목적지의 MAC 주소(6 bytes), 출발지 MAC 주소(6 bytes), 유형(2 bytes)으로 총 14 bytes로 구성된다.
+IP 주소는 네트워크의 규모에 따라 A ~ E 클래스로 나뉘어져 있으며 IPv4 32 비트를 톡탯 단위로 끊어 네트워크 ID와 호스트 ID로 구분한다.
 
-|목적지 MAC 주소|출발지 MAC 주소|유형|
+- 네트워크 ID는 어떤 네트워크인지, 호스트 ID는 해당 네트워크에서 어떤 컴퓨터인지 나타낸다.
+
+네트워크 ID와 호스트 ID 비중에 따라 네트워크 규모(클래스)를 구분한다.
+
+
+|클래스 이름|내용|네트워크 ID|호스트 ID|
+|---|---|---|---|
+|A 클래스|대규모 네트워크 주소|8비트|24비트|
+|B 클래스|중형 네트워크 주소|16비트|16비트|
+|C 클래스|소규모 네트워크 주소|24비트|8비트|
+|D 클래스|멀티캐스트(multicast) 주소|x|x|
+|E 클래스|연구 및 특수용도 주소|x|x|
+
+<br>
+
+공인 Ip 주소와 사실 Ip 주소를 포함한 클래스 범위는 다음과 같다.
+
+|클래스 이름|공인 IP 주소의 범위|사설 IP 주소의 범위|
 |---|---|---|
-|6 바이트|6 바이트|2 바이트|
+|A 클래스|1.0.0.0 ~ 9.255.255.255
+11.0.0.0 ~ 126.255.255.255|10.0.0.0 ~ 10.255.255.255|
+|B 클래스|128.0.0.0 ~ 172.15.255.255
+172.32.0.0 ~ 191.255.255.255|172.16.0.0 ~ 172.31.255.255|
+|C 클래스|192.0.0.0 ~ 192.167.255.255
+192.169.0.0 ~ 223.255.255.255|192.168.0.0 ~ 192.168.255.255|
 
-이더넷 유형은 이더넷으로 전송되는 상위 계층 프로토콜의 종류를 식별하는 번호를 나타낸다.
+- A 클래스의 1옥텟의 범위는 2진수로 00000001~01111111(1~127)
+- B 클래스의 1옥텟의 범위는 2진수로 10000000~10111111(128~191)
+- C 클래스의 1옥텟의 범위는 2진수로 11000000~11011111(192~223)
 
-|유형 번호|프토로콜|
+<br>
+
+#### 네트워크 주소 / 브로드캐스트 주소
+
+IP 주소에는 특별한 경우에 사용하는 네트워크 주소와 브로드캐스트 주소가 있다. 따라서, 컴퓨터나 라우터가 자신의 IP 주소로 사용할 수 없다.
+
+`네트워크 주소` 는 전체 네트워크에서 작은 네트워크를 대표하는 주소로 네트워크를 식별하기 위해 사용되며 호스트 ID가 10진수로 0이다.
+`브로드캐스트 주소` 는 네트워크에 있는 장비 모두에게 한 번에 데이터를 전송하는 데 사용되는 IP 주소이며 호스트 ID가 10진수로 255이다.
+
+<br>
+
+#### 서브넷(Subnet)
+
+A 클래스와 같이 큰 네트워크를 작은 규모의 네트워크로 분할하는 것을 `서브넷팅` 이라고 하며 분할된 네트워크를 `서브넷` 이라고 한다.
+
+기존에 있던 호스트 ID의 일부를 서브넷 ID로 바꾸어 서브넷을 만든다.
+
+- 서브넷팅 전
+|네트워크 ID|호스트 ID|
 |---|---|
-|0800|IPv4|
-|0806|ARP|
-|8035|RARP|
-|814C|SNMP over Ethernet|
-|86DD|IPv6|
+|00000001|00000000 00000000 00000000|
+
+- 서브넷팅 후
+|네트워크 ID|서브넷 ID|호스트 ID|
+|---|---|---|
+|00000001|00000000 00|000000 00000000|
 
 
 <br>
 
-#### 이더넷 규격
+`서브넷 마스크` 란 네트워크 ID와 호스트 ID를 식별하기 위한 값으로 어디까지가 서브넷 ID인지를 확인하기 위해 사용한다.
 
-`이더넷 규격` 이란 통신이 가능한 랜선의 데이터 전송 속도를 정의한 것이라고 보면 된다. 규격 이름은 `(통신 속도 + 전송 방식 + 케이블 종류)` 로 결정된다.
-다음은 주로 사용되는 대표적인 규격이다.
+서브넷 ID를 사용하지 않은 기존 각 클래스의 서브넷 마스크는 다음과 같다.
+
+|클래스|서브넷 마스크|프리픽스 표기법|
+|---|---|---|
+|A 클래스|11111111 00000000 00000000 00000000|/8|
+|B 클래스|11111111 11111111 00000000 00000000|/16|
+|C 클래스|11111111 11111111 11111111 00000000|/24|
 
 
-|규격 이름|통신 속도|케이블|케이블 최대 길이|표준화 연도|
-|---|---|---|---|---|
-|10BASE5|10Mbps|동축케이블|500m|1982년|
-|10BASE2|10Mbps|동축케이블|185m|1988년|
-|10BASE-T|10Mbps|UTP케이블(Cat3이상)|100m|1990년|
-|100BASE5-TX|100Mbps|UTP케이블(Cat5이상)|100m|1995년|
-|1000BASE-T|1000Mbps|UTP케이블(Cat5이상)|100m|1999년|
-|10GBASE-T|10Gbps|UTP케이블(Cat6a이상)|100m|2006년|
+<br>
+
+### 라우터(Router)
+---
+
+`라우터` 란 서로 다른 네트워크와 통신하기 위해 필요한 장비로 네트워크를 분리하는 역할도 수행한다.
+
+- 다른 네트워크에 있는 컴퓨터에 데이터를 전송하려면 가장 먼저 기본 게이트웨이(default gateway)를 설정해야 한다. 이는 라우터 IP 주소를 설정하는 것이다.
+- 라우터 IP 주소가 필요한 이유는 다른 네트워크의 컴퓨터로 데이터를 보내야할 때 송신 컴퓨터는 어디로 보내야할 지 모르기 때문이다.
+
+<br>
+
+#### 라우팅(routing)
+
+`라우팅` 은 경로 정보를 기반으로 현재의 네트워크에서 목적 네트워크까지의 최적의 경로로 데이터를 전송하는 방식이다.
+
+- 경로 정보는 라우터의 라우팅 테이블에 저장되어 있으며 수동으로 등록하거나 자동으로 등록할 수 있다.
+  - 수동으로 등록하는 방법은 주로 소규모 네트워크에 적합하다.
+  - 자동으로 등록하는 방법은 대규모 네트워크게 적합하며 라우터 간에 경로 정보를 교환하면서 라우팅 테이블 정보를 자동으로 수정한다.
+
+이처럼 라우터 간에 라우팅 정보를 교환하기 위한 프로토콜을 `라우팅 프로토콜` 이라고 하며 대표적으로 RIP, OSPF, BGP 등이 있다.
