파일 수정/추가

--- a/post_back/2024-01-18-2-[Network]모두의 네트워크(전송 계층).md
+++ b/post_back/2024-01-18-2-[Network]모두의 네트워크(전송 계층).md
@@ -1,75 +1,121 @@
-## 모두의 네트워크(데이터 링크 계층)
+## 모두의 네트워크(전송 계층)
 
 해당 포스팅은 `모두의 네트워크` 책을 정리한 내용으로 OSI 모델의 2계층인 데이터 링크 계층에 대해 다룬다.
 
-`데이터 링크 계층(Data Link Layer)` 은 네트워크 기기 간에 데이터를 전송하고 물리 주소를 결정하며 네트워크 장비 간에 신호를 주고받는 규칙을 정한다.
+`전송 계층(Transport Layer)` 은 목적지까지 신뢰할 수 있는 데이터를 전달하기 위해 존재한다.
+
+전송 계층의 특징은 다음과 같다.
+- 오류 발생 시 재전송을 요청하여 데이터를 정확히 전달한다.
+- 전송된 데이터의 목적지가 어떤 어플리케이션인지 식별한다.
 
 <br>
 
-### 이더넷(Ethernet)
+### 전송 계층 통신 방식
 ---
 
-`이더넷` 이란 랜에서 데이터를 주고 받기 위한 규칙으로 허브와 같은 장비에 연결된 컴퓨터와 데이터를 주고받을 때 사용한다.
+전송 계층 통신 방식으로는 `연결형 통신` 과 `비연결형 통신` 2가지가 있다.
 
-- 일반적으로 사용되는 랜에서 가장 많이 활용되는 기술 규격이다.
-- 만약 허브에 연결된 컴퓨터들이 동시에 데이터를 보낸다면 충돌(collision)이 발생할 수도 있다.
+- 연결형 통신
+  - 신뢰할 수 있고 정확한 데이터를 목적지에 문제 없이 전달하는 통신
+  - 신뢰성/정확성을 위해 여러 번 확인하고 데이터를 송신
+  - 전송이 양방향으로 동시에 일어나는 전이중 방식
+  - 각 연결이 정확히 2개의 종단점을 가지는 점대점 방식
+  - 프로토콜 : TCP
+
+- 비연결형 통신
+  - 데이터를 빠르고 효율적으로 전달하는 통신
+  - 효율성을 위해 확인 절차 없이 일방적으로 데이터를 송신
+  - 신뢰성을 보장하지는 않음
+  - 데이터를 데이터그램 단위로 처리
+  - 프로토콜 : UDP
 
 <br>
 
-#### CSMA/CD
-
-`CSMA/CD` 란 Carrier Sense Multiple Access with Collision Detection의 약어로 데이터 전송 시점을 늦추는 방법을 사용하여 반송파 감지 다중 접속 및 충돌을 방지한다.
-
-- CS : 데이터를 보내려고 하는 컴퓨터가 케이블에 데이터가 흐르고 있는지 확인하는 규칙
-- MA : 케이블에 데이터가 흐르고 있지 않으면 데이터를 보내도 된다는 규칙
-- CD : 충돌이 발생하고 있는지 확인하는 규칙
-
-최근에는 스위치 장비를 사용하면서 CSMA/CD를 잘 사용하지 않는다.
-
-<br>
-
-### MAC 주소
+### TCP
 ---
 
-`MAC 주소` 란 Media Access Control Address의 약어로 랜카드에 할당된 전 세계에서 유일한 번호로 물리 주소를 의미한다.
+`TCP` 란 전송 계층에서 사용되는 프로토콜 데이터 단위를 말한다.
 
-- 48비트 숫자로 구성되어 있으며 앞 24비트는 제조사 번호, 뒤 24비트는 일련번호를 나타낸다.
-- MAC 주소를 사용한 통신으로는 이더넷 헤드와 트레일러가 있다.
+- TCP로 데이터를 전송할 때, 상위 계층에서 받아온 데이터에 붙이는 헤더를 `TCP 헤더` 라고 한다.
+- TCP 헤더가 붙은 데이터를 `세그먼트(segment)`라고 한다.
 
 <br>
 
-#### 이더넷 헤더
+#### 3-way handshake
 
-`이더넷 헤더` 는 목적지의 MAC 주소(6 bytes), 출발지 MAC 주소(6 bytes), 유형(2 bytes)으로 총 14 bytes로 구성된다.
 
-|목적지 MAC 주소|출발지 MAC 주소|유형|
-|---|---|---|
-|6 바이트|6 바이트|2 바이트|
+데이터를 보내기 전에 연결을 확립하기 위해 패킷 요청을 세번 교환하는 것을 `3-way handshake` 라고 하며 SYN, ACK를 사용하여 다음 3단계로 이루어진다.
 
-이더넷 유형은 이더넷으로 전송되는 상위 계층 프로토콜의 종류를 식별하는 번호를 나타낸다.
+- 통신을 위해 먼저 클라이언트에서 서버로 연결 확립 허가를 받기 위한 요청(SYN)을 보낸다.
+- 서버는 클라이언트가 보낸 요청을 받은 후에 허가한다는 응답을 회신하기 위해 연결 확립 응답(ACK)을 보낸다. 동시에 서버도 클라이언트에게 데이터 전송 허가를 받기 위해 연결 확립 요청(SYN)를 보낸다.
+- 서버의 요청을 받은 클라이언트는 서버로 허가한다는 응답으로 연결 확립 응답(ACK)를 보낸다.
 
-|유형 번호|프토로콜|
+데이터 전송 후에 연결을 끊기 위한 요청 교환도 있어야 하며 이때는 FIN과 ACK를 사용한다.
+
+- 클라이언트에서 서버로 FIN을 보낸다.
+- 서버에서 클라이언트로 ACK를 반환한다.
+- 서버에서 클라이언트로 FIN을 보낸다.
+- 클라이언트에서 서버로 ACK를 반환한다.
+
+<br>
+
+### 일련번호 / 확인 응답 번호
+---
+
+3-way handshake가 끝나고 데이터를 주고 받을 때 일련번호와 확인 응답 번호를 사용한다.
+
+`일련번호` 는 송신 측에서 수신 측에 이 데이터가 몇 번째 데이터인지 알려주는 역할을 한다. 이 번호를 통해 수신 측은 원래 데이터의 몇 번째 데이터를 받았는지 알 수 있다.
+`확인 응답 번호` 는 수신 측이 몇 번째 데이터를 수신했는지 송신 측에 알려주는 역할을 한다. 받은 데이터의 다음 번호의 데이터를 요청하는데 사용한다.
+
+첫 일련번호와 확인 응답 번호는 3-way handshake에서 결정되며 위의 두 정보를 사용해서 데이터가 손상되거나 유실된 경우 재전송하는 기능을 `재전송 제어` 라고 한다.
+
+<br>
+
+#### 윈도우 크기
+
+TCP는 세그먼트(데이터) 하나를 보낼 때마다 확인 응답을 한 번 반환한다. 이와 같은 통신은 한 번 보낼 때마다 한 번 응답을 반환하는 방식이어서 효율이 낮다. 그래서 확인 응답을 받기 전에 세그먼트를 연속해서 보내는 방법을 사용한다.
+
+연속으로 보내진 세그먼트는 수신 측의 버퍼(buffer)에 쌓이고, 버퍼가 넘치는 현상을 `오버플로(overflow)` 라고 한다.
+
+오버플로가 발생하지 않도록 버퍼의 한계 크기를 알고 있어야 하며 그것이 TCP 헤더의 윈도우 크기(window size) 값에 해당한다. 즉, 윈도우 크기는 얼마나 많은 용량의 데이터를 저장해 둘 수 있는지를 나태낸다.(확인 응답을 일일이 하지 않고 연속해서 송수신할 수 있는 데이터 크기)
+
+3-way handshake를 할 때 서로 버퍼의 용량을 교환하여 오버플로우를 방지한다.
+
+
+<br>
+
+### 포트 번호
+---
+
+`포트 번호` 란 각 어플리케이션이 가지고 있는 번호로 어플리케이션을 구분하는 데 사용된다.
+
+- 0 ~ 65535 번을 사용할 수 있고, 0 ~ 1023 번은 주요 프로토콜이 사용하여 잘 알려진 포트(well-known port)라고 한다.
+- 1024번은 사용되지 않고 1025번 이상은 랜덤 포트라고 해서 클라이언트 측의 송신 포트로 사용된다.
+- TCP 헤더에 출발지 포트 번호와 목적지 포트 번호를 넣어서 보내어 목표 어플리케이션에 정확히 도달하도록 한다.
+- 서버 측 포트 번호는 직접 정해야 하지만, 클라이언트 측은 정하지 않아도 된다.
+
+다음은 주로 사용하는 포트 번호이다.
+
+|어플리케이션|포트 번호|
 |---|---|
-|0800|IPv4|
-|0806|ARP|
-|8035|RARP|
-|814C|SNMP over Ethernet|
-|86DD|IPv6|
-
+|SSH|22|
+|SMTP|25|
+|DNS|53|
+|HTTP|80|
+|POP3|110|
+|HTTPS|443|
 
 <br>
 
-#### 이더넷 규격
+### UDP
+---
 
-`이더넷 규격` 이란 통신이 가능한 랜선의 데이터 전송 속도를 정의한 것이라고 보면 된다. 규격 이름은 `(통신 속도 + 전송 방식 + 케이블 종류)` 로 결정된다.
-다음은 주로 사용되는 대표적인 규격이다.
+`UDP` 는  비연결형 통신으로 데이터를 전송할 때 TCP와 달리 복잡한 과정이 없다. 그래서 데이터를 효율적으로 빠르게 보낼 수 있다는 장점이 있다.
 
-
-|규격 이름|통신 속도|케이블|케이블 최대 길이|표준화 연도|
-|---|---|---|---|---|
-|10BASE5|10Mbps|동축케이블|500m|1982년|
-|10BASE2|10Mbps|동축케이블|185m|1988년|
-|10BASE-T|10Mbps|UTP케이블(Cat3이상)|100m|1990년|
-|100BASE5-TX|100Mbps|UTP케이블(Cat5이상)|100m|1995년|
-|1000BASE-T|1000Mbps|UTP케이블(Cat5이상)|100m|1999년|
-|10GBASE-T|10Gbps|UTP케이블(Cat6a이상)|100m|2006년|
+- 신뢰성과 정확성이 필요하지 않아서 작은 크기의 `UDP 헤더` 를 가진다.
+- UDP 헤더는 TCP 헤더에 비해 간단하다.
+- UDP 헤더가 붙은 데이터를 `UDP 데이터그램` 이라고 한다.(TCP 헤더가 있는 데이터는 세그먼트)
+- 랜에서 불특정 다수에게 브로드캐스트로 데이터를 일괄 전송한다.
+- DNS에서 UDP를 사용하는데 이유는 다음과 같다.
+  - 데이터(DNS request) 크기가 작다.
+  - connection을 유지하지 않아도 되기 때문에 3 way handshaking이 필요 없다.
