파일 수정/추가

--- a/포스팅/2024-01-18-1-[Network]모두의 네트워크(네트워크 계층).md
+++ b/포스팅/2024-01-18-1-[Network]모두의 네트워크(네트워크 계층).md
@@ -1,6 +1,6 @@
 ## 모두의 네트워크(네트워크 계층)
 
-해당 포스팅은 `모두의 네트워크` 책을 정리한 내용으로 OSI 모델의 2계층인 데이터 링크 계층에 대해 다룬다.
+해당 포스팅은 `모두의 네트워크` 책을 정리한 내용으로 OSI 모델의 3계층인 네트워크 계층에 대해 다룬다.
 
 `네트워크 계층(Network Layer)` 은 서로 다른 네트워크에 있는 목적지로 데이터를 전송하는 기능을 수행한다.
 
