--- a/포스팅/2024-01-19-[Network]모두의 네트워크(응용 계층).md
+++ b/포스팅/2024-01-19-[Network]모두의 네트워크(응용 계층).md
@@ -1,6 +1,6 @@
 ## 모두의 네트워크(응용 계층)
 
-해당 포스팅은 `모두의 네트워크` 책을 정리한 내용으로 OSI 모델의 2계층인 데이터 링크 계층에 대해 다룬다.
+해당 포스팅은 `모두의 네트워크` 책을 정리한 내용으로 OSI 모델의 5계층인 응용 계층에 대해 다룬다.
 
 `응용 계층(Application Layer)` 은 시스템 간의 응용 처리는 상호 간에 통신하면서 일련의 업무를 처리할 수 있도록 필요한 서비스 기능을 제공한다. 또한, 이메일, 파일 전송, 웹 사이트 조회 등 어플리케이션에 대한 서비스를 제공한다.
 
@@ -70,3 +70,75 @@ WWW에는 HTML, HTTP, URL 세 가지 기술이 사용된다.
 <br>
 
 #### HTML
+
+`HTML` 은 HyperText Markup Language의 약어로 태그를 사용하여 웹 페이지에서 문장 구조나 문자를 꾸미는 마크업 언어이다.
+
+- 웹 브라우저는 HTML을 기반으로 동작한다.
+- 하이퍼텍스트(hypertext)를 작성하는 마크업 언어라고도 한다.
+- 하이퍼텍스트로는 문자와 이미지를 표시하거나 하이퍼링크를 사용할 수 있다.
+  
+
+<br>
+
+#### HTTP
+
+클라이언트는 웹 사이트를 보기 위해 서버의 80번 포트를 사용하여 HTTP 통신을 하며 클라이언트에서 HTTP 요청(request)를 보내고 서버에서 HTTP 응답(response)을 반환한다.
+
+- HTTP/1.1에서 keepalive라는 기능이 추가되어 순차적인 데이터 교환을 마칠 때까지 연결을 유지했다.
+- HTTP/2에서는 데이터 교환을 할 때, 요청 온 순서대로 응답하지 않아도 되기 때문에 더 빨라졌다.
+
+<br>
+
+### DNS
+---
+
+웹 서버에 접속하기 위해서 서버의 IP 주소가 필요하며 웹 서버의 주소는 사용자가 이해하거나 기억하기 어려우므로 보통 URL을 통해 웹 서버에 접속한다.
+`DNS` 는 URL을 IP 주소로 변환하는 서비스이다.
+
+- DNS 서버는 전 세계에 흩어져 잇고 모두 계층적으로 연결되어 있다.
+- DNS 서버가 도메인의 IP 주소를 모를 때 다른 DNS 서버에게 요청하여 IP 주소를 확인한다.
+
+<br>
+
+### 메일 서버
+---
+
+메일을 송수신하려면 클라이언트 측의 메일 프로그램과 서버 측의 메일 서버 프로그램 간에 통신을 해야 한다. 그 때 사용되는 프로토콜에는 두 가지 종류가 있다.
+
+<br>
+
+#### SMTP
+
+메일을 보내는 데 사용되는 프로토콜로 25번 포트를 사용하며 SMTP에 의한 메일 송신과정은 다음과 같다.
+
+- 1.세션 시작을 통지한다.
+- 2.송신자의 메일 주소를 통지한다.
+- 3.목적지 메일 주소를 통지한다.
+- 4.메일 본문 전송을 통지한다.
+- 5.메일 본문을 송신한다.
+- 6.세션 종료를 통지한다.
+
+
+<br>
+
+#### POP3
+
+메일을 받는 데 사용되는 프로토콜로 110번 포트를 사용한다. 메일 서버에는 `메일 박스` 라고 하는 메일을 보관해 주는 기능이 있다. POP3에 의한 메일 수신 과정은 다음과 같다.
+
+- 1.세션을 시작한다
+- 2.컴퓨터 2는 받는 사람의 사용자 이름을 통지하고 메일 서버 2는 'OK'라는 확인 응답을 반환한다.
+- 3.컴퓨터 2에서 수신자의 비밀번호를 통지하고 메일 서버 2는 '비밀번호 확인'이라는 확인 응답을 반환한다.
+- 4.컴퓨터 2에서 자신의 메일이 있는 지 확인하고 메일 서버 2는 '있음'이라는 확인 응답을 반환한다.
+- 5.컴퓨터 2에서 메일의 전송을 요청하여 메일 서버 2의 메일 박스에 보관된 이메일을 전송받는다.
+- 6.세선을 종료한다.
+
+<br>
+
+### PING
+---
+
+`PING` 이란 ICMP(Internet Control Message Protocol)라는 프로토콜을 사용하여 목적지 컴퓨터에 ICMP 패킷을 전송하고 패킷에 대한 응답이 제대로 오는지 확인하는 명령이다.
+ping 명령이 정상적으로 실행되면 네트워크 연결이 정상이라고 판단할 수 있으므로 문제를 확인할 때 주로 사용하며 사용법은 다음과 같다.
+
+- ping 목적지 IP 주소
+- ping 목적지 호스트 이름
