--- a/포스팅/2024-01-18-2-[Network]모두의 네트워크(전송 계층).md
+++ b/포스팅/2024-01-18-2-[Network]모두의 네트워크(전송 계층).md
@@ -1,6 +1,6 @@
 ## 모두의 네트워크(전송 계층)
 
-해당 포스팅은 `모두의 네트워크` 책을 정리한 내용으로 OSI 모델의 2계층인 데이터 링크 계층에 대해 다룬다.
+해당 포스팅은 `모두의 네트워크` 책을 정리한 내용으로 OSI 모델의 4계층인 전송 계층에 대해 다룬다.
 
 `전송 계층(Transport Layer)` 은 목적지까지 신뢰할 수 있는 데이터를 전달하기 위해 존재한다.
 
