--- a/포스팅/2020-06-21-[Python]람다함수.md
+++ b/포스팅/2020-06-21-[Python]람다함수.md
@@ -100,22 +100,22 @@ sorted(리스트/튜플, 파라미터)
 
 <br>
 
-첫번째 인자인 함수는두번째 인자로 들어온 리스트나 튜플을 하나하나씩 받아서 필터링할 함수를 정의한다.
-두번째 인자인 리스트나 튜플은 바꾸고자 하는 데이터들을 정의한다.
-
-다음은 `filter` 함수와 람다 함수를 함께 사용하는 예제이다.
 
 ```python
-mylist = [1, 2, 3, 4, 5]
-result = list(filter((lambda x : x % 2 == 1), mylist))
-print(result)
+countries = [
+  {'code': 'KR', 'name': 'Korea'},
+  {'code': 'CA', 'name': 'Canada'},
+  {'code': 'US', 'name': 'United States'},
+  {'code': 'GB', 'name': 'United Kingdom'},
+  {'code': 'CN', 'name': 'China'}
+]
 
-result2 = list(filter((lambda x : x % 2 == 0), range(10)))
-print(result2)
+print(sorted(countries, key=lambda country: country["code"]))
+
+print(sorted(countries, key=lambda country: country["name"]))
 ```
-
 ```text
-[1, 3, 5]
+[{'code': 'CA', 'name': 'Canada'}, {'code': 'CN', 'name': 'China'}, {'code': 'GB', 'name': 'United Kingdom'}, {'code': 'KR', 'name': 'Korea'}, {'code': 'US', 'name': 'United States'}]
 
-[0, 2, 4, 6, 8]
+[{'code': 'CA', 'name': 'Canada'}, {'code': 'CN', 'name': 'China'}, {'code': 'KR', 'name': 'Korea'}, {'code': 'GB', 'name': 'United Kingdom'}, {'code': 'US', 'name': 'United States'}]
 ```
