--- a/포스팅/2020-07-11-[Python]모듈.md
+++ b/포스팅/2020-07-11-[Python]모듈.md
@@ -1,19 +1,8 @@
----
-layout: post
-title: "[Python] 모듈"
-category: [Python]
-
----
-<br>
-
-`모듈`에 대해 알아보자
-<!-- more -->
-
-<hr>
 
 
-# 모듈
----
+## 모듈
+
+`모듈` 이란 함수나 변수, 클래스 등이 정으된 파이썬 파일(.py)로 다른 파이썬 프로그램에서 불러와 사용할 수 있다.
 <!-- mod.py -->
 ```python
 def add(a, b):
@@ -23,24 +12,30 @@ def sub(a, b):
     return a - b 
 ```
 ```python
->>> import mod
->>> print(mod.add(3, 4))
+import mod
+print(mod.add(3, 4))
+print(mod.sub(3, 4))
+```
+```text
 7
->>> print(mod.sub(3, 4))
 -1
 ```
+```python
+from mod import add, sub
+from mod import *
+
+add(3,4)
+sub(1,4)
+```
+```text
+7
+-3
+```
+
 `import 모듈이름`
 
 `from 모듈이름 import 모듈함수`
 
-```python
->>> from mod import add, sub
->>> from mod import *
->>> add(3,4)
-7
->>> sub(1,4)
--3
-```
 <!--mod.py-->
 ```python
 def add(a, b):
@@ -71,24 +66,31 @@ def add(a, b):
     return a + b
 ```
 ```python
->>> import mod1
->>> print(mod1.PI)
+import mod1
+print(mod1.PI)
+
+a = mod1.Math()
+a.sove(2)
+
+print(mod1.add(mod1.PI, 4.4))
+```
+```text
 3.141592
 
->>> a = mod1.Math()
->>> a.sove(2)
 12.566368
 
->>> print(mod1.add(mod1.PI, 4.4))
 7.5415920000000005
 ```
 ```python
->>> from mod1 import *
->>> print(PI)
+from mod1 import *
+print(PI)
+
+a = Math()
+a.sove(2)
+```
+```text
 3.141592
 
->>> a = Math()
->>> a.sove(2)
 12.566368
 ```
 
@@ -100,6 +102,7 @@ a = Math()
 print(a.sove(2))
 print(add(4,5))
 ```
-python>python mod2.py
+```text
 12.566368
 9
+```
