--- a/포스팅/[완료]2020-07-08-[Python]클래스.md
+++ b/포스팅/[완료]2020-07-08-[Python]클래스.md
@@ -1,44 +1,44 @@
----
-layout: post
-title: "[Python] 클래스"
-category: [Python]
-
----
-<br>
-
-`클래스`에 대해 알아보자
-<!-- more -->
-
-<hr>
 
 
-# 클래스
----
+## 클래스
+
+
 ```python
 class Fourcal():
     def setdata(self, first, second):
         self.first = first
         self.second = second
 ```
+
+<br>
+
 ```python        
->>> import mod
->>> a = mod.Fourcal()
->>> a.setdata(4,2)
->>> print(a.first)
+import mod
+a = mod.Fourcal()
+a.setdata(4,2)
+print(a.first)
+print(a.second)
+
+b = mod.Fourcal()
+b.setdata(6,5)
+print(b.first)
+print(b.second)
+```
+```text
 4
->>> print(a.second)
 2
 
->>> b = mod.Fourcal()
->>> b.setdata(6,5)
->>> print(b.first)
 6
->>> print(b.second)
 5
 ```
 
+<br>
+
 메소드 선언의 self 매개변수에는 해당 메소드를 호출한 객체가 자동으로 전달된다.
 따라서, 메소드 선언에는 매개변수가 3개지만 실제 호출시에는 2개 인수로만 호출한다.
+
+<br>
+
 ```python
 class Fourcal():
     def setdata(self, first, second):
@@ -58,32 +58,38 @@ class Fourcal():
         return result
 ```
 ```python
->>> import mod
->>> a = mod.Fourcal()
->>> a.setdata(4,2)
->>> print(a.add())
+import mod
+a = mod.Fourcal()
+a.setdata(4,2)
+print(a.add())
+print(a.mul())
+print(a.sub())
+print(a.div())
+
+b = mod.Fourcal()
+b.setdata(6,5)
+print(b.add())
+print(b.mul())
+print(b.sub())
+print(b.div())
+```
+```text
 6
->>> print(a.mul())
 8
->>> print(a.sub())
 2
->>> print(a.div())
 2.0
 
->>> b = mod.Fourcal()
->>> b.setdata(6,5)
->>> print(b.add())
 11
->>> print(b.mul())
 30
->>> print(b.sub())
 1
->>> print(b.div())
 1.2
 ```
 
-## 생성자
+<br>
+
+### 생성자
 ---
+
 ```python
 class Fourcal():
     def __init__(self, first, second):
@@ -105,28 +111,38 @@ class Fourcal():
         result = self.first / self.second
         return result
 ```
+
 위와 같이 생성자함수는 `__init__` 이 되며 객체 생성시에 자동으로 호출된다.
 따라서, 변수 값을 셋팅하는 setdata() 함수를 호출하지 않아도 되며, 대신 객체 생성 시 생성자에 선언된 매개변수를 전달해줘야 한다.
+
+<br>
+
 ```python
->>> import mod
->>> a = mod.Fourcal(4, 2)
->>> print(a.first)
+import mod
+a = mod.Fourcal(4, 2)
+print(a.first)
+print(a.second)
+print(a.add())
+print(a.mul())
+print(a.sub())
+print(a.div())
+```
+```text
 4
->>> print(a.second)
 2
->>> print(a.add())
 6
->>> print(a.mul())
 8
->>> print(a.sub())
 2
->>> print(a.div())
 2.0
 ```
 
-## 상속
+<br>
+
+### 상속
 ---
+
 `class 클래스 이름(상속할 클래스 이름)`
+
 ```python
 class Fourcal():
     def __init__(self, first, second):
@@ -154,15 +170,17 @@ class MoreFourcal(Fourcal):
         return result
 ```
 ```python
->>> import mod
->>> a = mod.MoreFourcal(4, 2)
-Fourcal 생성자
-
->>> print(a.pos())
+import mod
+a = mod.MoreFourcal(4, 2)
+print(a.pos())
+print(a.add())
+```
+```text
 16
->>> print(a.add())
 6
 ```
+
+<br>
 
 
 ```python
@@ -199,26 +217,26 @@ class MoreFourcal(Fourcal):
         print("자식클래스")
 ```
 ```python
->>> import mod
->>> a = mod.MoreFourcal(4, 2, 5)
+import mod
+a = mod.MoreFourcal(4, 2, 5)
+a.add()
+a.pos()
+a.div()
+a.show_child()
+```
+```text
 Fourcal 생성자
 MoreFourcal 생성자
-
->>> a.add()
 Fourcal add : 6
-
->>> a.pos()
 MoreFourcal pos : 21
-
->>> a.div()
 Fourcal div : 2.0
-
->>> a.show_child()
 부모클래스
 자식클래스
 ```
 
-### 메소드 오버라이딩
+<br>
+
+#### 메소드 오버라이딩
 ---
 ```python
 class Fourcal():
@@ -254,11 +272,12 @@ class MoreFourcal(Fourcal):
         print("MoreFourcal div : {0}".format(result))
 ```
 ```python
->>> import mod
->>> a = mod.MoreFourcal(1,2,3)
+import mod
+a = mod.MoreFourcal(1,2,3)
+a.div()
+```
+```text
 Fourcal 생성자
 MoreFourcal 생성자
-
->>> a.div()
 MoreFourcal div : 1
 ```
